a few changes, done for the night

--- a/art_history/art_history.html
+++ b/art_history/art_history.html
@@ -43,7 +43,7 @@
                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
             </section>
-            <section class="Expressionism">
+            <section class="expressionism">
                 <h2>Expressionism</h2>
                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
                 <div class="image">
@@ -53,8 +53,8 @@
                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestase, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
                 <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.  semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
             </section>
-            <section class="related clearfix">
-                <h2>Related Articles</h2>
+            <section class="related">
+                <h2 class="articles">Related Articles</h2>
                 <ul>
                     <li><h3>Article Title About Art</h3>
                         <p>This is a short synopsis of an article about some art stuff that might interest people.</p>
