--- a/art_history/art_history.html
+++ b/art_history/art_history.html
@@ -79,15 +79,15 @@
             </section>
             <footer>
               <ul>
-                <li>Home</li>
-                <li>Cubism</li>
-                <li>Expressionism</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Cubism</a></li>
+                <li><a href="#">Expressionism</a></li>
               </ul> 
               <ul>
-                <li>Donate</li>
-                <li>Visit a Museum</li>
-                <li>For the Kids</li>
-                <li>A Night at the Museum</li>
+                <li><a href="#">Donate</a></li>
+                <li><a href="#">Visit a Museum</a></li>
+                <li><a href="#">For the Kids</a></li>
+                <li><a href="#">A Night at the Museum</a></li>
 
               </ul>
 
