stopping for the night

--- a/art_history/art_history.html
+++ b/art_history/art_history.html
@@ -80,15 +80,17 @@
                         <a href="#">Read more</a>
                     </li>   
                   
-                    <li class="clearfix">   
-                        <img src="img/article_2.jpg">
+                    <li class="article_2 clearfix">   
+                        <img id="second_image" src="img/article_2.jpg">
+                        <img id="first_image" src="img/article_1.png">
                         <h3>Article Title About Art</h3>
                         <p>This is a short synopsis of an article about some art stuff that might interest people.</p>
                         <a href="#">Read more</a>
                     </li> 
                   
-                    <li class="clearfix"> 
-                        <img src="img/article_3.jpg">
+                    <li class="article_3 clearfix"> 
+                        <img id="third_image" src="img/article_3.jpg">
+                        <img id="first_image" src="img/article_1.png">
                         <h3>Article Title About Art</h3>
                         <p>This is a short synopsis of an article about some art stuff that might interest people.</p>
                         <a href="#">Read more</a>
