friday evening update

--- a/art_history/art_history.html
+++ b/art_history/art_history.html
@@ -43,7 +43,7 @@
 
                 
             </section>
-            <div class="copy">
+            <div class="copy clearfix">
                 <section class="cubism clearfix">
                     <div class="cubism_article">
                         <h2>Cubism</h2>
@@ -100,7 +100,7 @@
             </div>
              
             </section>
-            <footer class="clearfix">
+            <footer >
               <ul id="home">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Cubism</a></li>
